refactor: replace Collections.emptyMap() with Map.of() for improved clarity